--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ button {
       background-size: cover;
 }
 .team-five {
-      background: url(team-two.jpg) no-repeat 50% 50%;
+      background: url(team_five.jpg) no-repeat 50% 50%;
       background-size: cover;
 }
 
